--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -17,3 +17,23 @@ jobs:
 
     - name: Run test    
       run: npm test
+      
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Pull to runner
+      uses: actions/checkout@v3
+      
+    - name: Install nodeJS
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18
+
+    - name: Install dependencies    
+      run: npm ci
+
+    - name: Build project
+      run: npm run build
+
+    - name: Deploy
+      run: echo "Deploy dummy!!!!"
